--- a/index.html
+++ b/index.html
@@ -7,27 +7,30 @@
     <title>Jogo da velha</title>
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body id="body">
     <main>
       <div id="escolha-jogador">
         <div>
           <h1>Escolha o primeiro jogador</h1>
         </div>
         <div class="area-botao">
-          <button class="btn azul" id="circulo">Círculo</button>
-          <button class="btn vermelho" id="quadrado">Quadrado</button>
+          <button class="btn azul" id="o">O</button>
+          <button class="btn vermelho" id="x">X</button>
         </div>
       </div>
-      <ul>
-        <li><div class="square-1"></div></li>
-        <li><div class="square-2"></div></li>
-        <li><div class="square-3"></div></li>
-        <li><div class="square-4"></div></li>
-        <li><div class="square-5"></div></li>
-        <li><div class="square-6"></div></li>
-        <li><div class="square-7"></div></li>
-        <li><div class="square-8"></div></li>
-        <li><div class="square-9"></div></li>
+      <div id="tela-vitoria">
+        <h1 id="vencedor"></h1>
+      </div>
+      <ul id="area-jogo">
+        <li><div class="square-1" id="1"></div></li>
+        <li><div class="square-2" id="2"></div></li>
+        <li><div class="square-3" id="3"></div></li>
+        <li><div class="square-4" id="4"></div></li>
+        <li><div class="square-5" id="5"></div></li>
+        <li><div class="square-6" id="6"></div></li>
+        <li><div class="square-7" id="7"></div></li>
+        <li><div class="square-8" id="8"></div></li>
+        <li><div class="square-9" id="9"></div></li>
       </ul>
     </main>
     <script src="script.js"></script>
