--- a/index.html
+++ b/index.html
@@ -20,17 +20,20 @@
       </div>
       <div id="tela-vitoria">
         <h1 id="vencedor"></h1>
+        <button class="btn azul-claro" style="display: none">
+          Jogar novamente
+        </button>
       </div>
-      <ul id="area-jogo">
-        <li><div class="square-1" id="1"></div></li>
-        <li><div class="square-2" id="2"></div></li>
-        <li><div class="square-3" id="3"></div></li>
-        <li><div class="square-4" id="4"></div></li>
-        <li><div class="square-5" id="5"></div></li>
-        <li><div class="square-6" id="6"></div></li>
-        <li><div class="square-7" id="7"></div></li>
-        <li><div class="square-8" id="8"></div></li>
-        <li><div class="square-9" id="9"></div></li>
+      <ul id="area-jogo" style="display: none">
+        <li><div class="square" id="1"></div></li>
+        <li><div class="square" id="2"></div></li>
+        <li><div class="square" id="3"></div></li>
+        <li><div class="square" id="4"></div></li>
+        <li><div class="square" id="5"></div></li>
+        <li><div class="square" id="6"></div></li>
+        <li><div class="square" id="7"></div></li>
+        <li><div class="square" id="8"></div></li>
+        <li><div class="square" id="9"></div></li>
       </ul>
     </main>
     <script src="script.js"></script>
