--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           Jogar novamente
         </button>
       </div>
-      <ul id="area-jogo" style="display: none">
+      <ul id="area-jogo" style="display: grid">
         <li><div class="square" id="1"></div></li>
         <li><div class="square" id="2"></div></li>
         <li><div class="square" id="3"></div></li>
