--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
         </button>
       </div>
       <ul id="area-jogo" style="display: grid">
-        <li><div class="square" id="1"></div></li>
-        <li><div class="square" id="2"></div></li>
-        <li><div class="square" id="3"></div></li>
-        <li><div class="square" id="4"></div></li>
-        <li><div class="square" id="5"></div></li>
-        <li><div class="square" id="6"></div></li>
-        <li><div class="square" id="7"></div></li>
-        <li><div class="square" id="8"></div></li>
-        <li><div class="square" id="9"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
+        <li><div id="squares"></div></li>
       </ul>
     </main>
     <script src="script.js"></script>
