--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       </div>
       <div id="tela-vitoria">
         <h1 id="vencedor"></h1>
-        <button class="btn azul-claro" style="display: none">
+        <button class="btn azul-claro" id="play-again" style="display: none">
           Jogar novamente
         </button>
       </div>
-      <ul id="area-jogo" style="display: grid">
+      <ul id="area-jogo" style="display: none">
         <li><div id="squares"></div></li>
         <li><div id="squares"></div></li>
         <li><div id="squares"></div></li>
